# EEmbDeviceBuilder

./: CMakeLists.txt  README.md  main.cpp
EEmbSimulator/: EEmbDevice.h  EEmbDeviceSerializer.cpp  quad.frag  quad.vert  quad2.frag  quad2.vert
Renderer/: Render.cpp  Render.h  SimulatorPeriphRender.cpp  nuklear_glfw_gl3.h
artifacts/M72MD13R/Simulator/: SimulatorInfo.json
artifacts/M72OD20R/Simulator/: SimulatorInfo.json
